# my-enterprise-platform

./: .gitignore  LICENSE  README.md  agent.py  api.py  cli.py  finance_server.py  main.py  pyproject.toml
architecture/: REFERENCE_ARCHITECTURE.md
architecture/decisions/: 001-adopt-mcp.md  002-agent-runtime.md  003-state-persistence.md  004-multi-agent-supervisor.md  005-decoupled-rag-mcp.md  006-anthropic-claude-migration.md  007-developer-experience-cli.md  008-observability-langsmith.md  009-decoupled-devsecai-gateway.md  010-eval-driven-development.md  011-semantic-triage-routing.md  012-secure-execution-hitl.md
src/eap/: agent.py  api.py  cli.py  finance_server.py  knowledge_seeder.py  legacy_db.py
src/eap/evals/: run_evals.py
src/eap/security/: firewall.py
