[project]
name = "my-enterprise-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.5",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
]
