[project]
name = "my-enterprise-platform"
version = "0.1.0"
description = "Enterprise Agentic Platform (EAP) providing secure, stateful multi-agent orchestration via LangGraph, MCP, and FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.85.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "langchain-anthropic>=1.4.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.26.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "typer>=0.24.1",
    "uvicorn>=0.42.0",
]
[project.scripts]
eap = "eap.cli:app"
[tool.uv]
package = true
